[package]
name = "gil-knocker"
version = "0.4.0"
edition = "2021"
authors = ["Miles Granger <miles59923@gmail.com>"]
license = "MIT"
description = "Knock on the Python GIL, determine how busy it is."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gilknocker"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
parking_lot = "^0.12"
