[project]
name = "gilknocker"
keywords = ["GIL"]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/milesgranger/gilknocker"
repository = "https://github.com/milesgranger/gilknocker"

[build-system]
requires = ["maturin>=1.3.0,<2.0.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
addopts = "-v --reruns 3"
